--- a/CLIENT/Views/Emp/Index.cshtml
+++ b/CLIENT/Views/Emp/Index.cshtml
@@ -22,8 +22,13 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <input type="hidden" class="form-control" id="Id">
+                    <div class="form-group" id="divemail">
+                        <label for="Name">Email :</label>
+                        <input class="form-control" id="Email" placeholder="Email">
+                    </div>
+                    <div class="form-group" id="divpass">
+                        <label for="Name">Password :</label>
+                        <input class="form-control" type="password" id="Password" placeholder="Password">
                     </div>
                     <div class="form-group">
                         <label for="Name">First Nama :</label>
@@ -38,10 +43,6 @@
                         <div class="form-group">
                             <select class="form-control" id="DepartmentOption" name="DepartmentId"></select>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Name">Email :</label>
-                        <input class="form-control" id="Email" placeholder="Email">
                     </div>
                     <div class="form-group">
                         <label for="Name">Birth Date:</label>
@@ -84,17 +85,5 @@
 </div>
 
 @section scripts{
-
-    @*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="~/Scripts/table2excel.js"></script>
-        <script type="text/javascript">
-            function () {
-                $("#btnExport").click(function () {
-                    $("#Department").table2excel({
-                        filename: "Department.xls"
-                    });
-                });
-            }
-        </script>*@
 <script src="~/Script/Emp.js"></script>
 }
