--- a/CLIENT/Views/Emp/Index.cshtml
+++ b/CLIENT/Views/Emp/Index.cshtml
@@ -3,10 +3,28 @@
     Layout = "~/Views/Layouts/Layout.cshtml";
 }
 <!-- Trigger the modal with a button -->
+<div class="row">
+    <div class="col-lg-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Donute Chart</h4>
+                <div id="DonutChart"></div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Bar Chart</h4>
+                <div id="BarChart"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <button id="btnadd" type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" title="Create New Employee">+</button>
 @*<a href="@Url.Action("Excel","Dept")" class="btn btn-primary"><span>Excel</span></a>
-<a href="@Url.Action("CSV","Dept")" class="btn btn-primary"><span>CSV</span></a>
-<a href="@Url.Action("Report","Dept")" class="btn btn-primary"><span>PDF</span></a>*@
+    <a href="@Url.Action("CSV","Dept")" class="btn btn-primary"><span>CSV</span></a>
+    <a href="@Url.Action("Report","Dept")" class="btn btn-primary"><span>PDF</span></a>*@
 @*<button id="btnExport" type="submit" class="btn btn-primary" value="Export">Export to Excel</button>
     <input type="submit" id="btnExport" value="Export" />*@
 
@@ -66,6 +84,7 @@
         </div>
     </div>
 </div>
+
 <div class="table-responsive m-t-40">
     <table id="Employee" class="table table-bordered table-striped">
         <thead>
@@ -85,5 +104,7 @@
 </div>
 
 @section scripts{
-<script src="~/Script/Emp.js"></script>
+    <script src="~/Script/Emp.js"></script>
+    <script src="~/Mini AdminPro/assets/plugins/raphael/raphael-min.js"></script>
+    <script src="~/Mini AdminPro/assets/plugins/morrisjs/morris.js"></script>
 }
