--- a/CLIENT/Views/Layouts/Layout.cshtml
+++ b/CLIENT/Views/Layouts/Layout.cshtml
@@ -367,7 +367,7 @@
                         <li class="nav-small-cap">PERSONAL</li>
                         <li>
                             <a class="has-arrow" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard </span></a>
-                            <ul aria-expanded="false" class="collapse">
+                            <ul aria-expanded="false" class="collapse" id="panel1">
                                 <li>@Html.ActionLink("Department", "Index", "Dept")</li>
                                 <li>@Html.ActionLink("Employee", "Index", "Emp")</li>
                             </ul>
